2.0.2   - Two Reboot checks merged into one for quicker response in Job Processor.
        - Added ability to release build/distribution lock in System Status.
2.0.1   - Clarified RMin/RMax in IP Sweep.
		- Fixed an issue with Redirects overruling each other.
        - Dropped legacy IP entry in Distribution Status.
        - Fixed an issue where hosts without blocks still had () appear in Rules.
        - Correctly handled broken fingerprint probe in D-Shell.
        - Moved block discovery to common functions. Added block discovery to Jobs.
        - Fixed a bug that prevented ID filtered hosts showing their blocks.
        - Blocks for Hosts in a Host Group are now displayed, floating Blocks are flagged as a risk.
        - Fixed an issue with the Jobs filter not working.
2.0.0   - DSMS repurposed as The Machine. Now includes IP allocation, DNS management, reverse proxy management, 
          sudoers management, D-Shell, Icinga management and LDAP/Active Directory integration.
----------------
1.10.0  - Added feedback system for hosts writing their own sudoers files (Last Successful Deployment).
        - Banners are now suppressed during distribution to make stdout clearer.
----------------
1.9.0   - Added host auto-registration process.
        - Added 'Last Successful Transfer' to Distribution Status.
        - Added the ability to use DHCP clients.
        - Fixed an alignment bug in Hosts and Sudo Users.
----------------
1.8.1   - Correctly escaped special sudoers characters (:,=) when the sudoers file is built.
        - Prevent escapes being added to commands.
        - Fixed an issue with account modification time not being updated on change.
1.8.0   - Better error handling for failed SFTP connections.
        - Formatting fixes for Groups and Rules.
        - Command Alias accepted characters are now clearly defined in line with Hosts and Users.
        - Password complexity requirements are now configurable in common.pl.