@@ -40,6 +40,7 @@ sub html_output {
 	## Version 2.0.2
 	$Table->addRow('2.0.2', 'Two Reboot checks merged into one for quicker response in Job Processor.');
 	$Table->addRow('', 'Added ability to release build/distribution lock in System Status.');
+	$Table->addRow('', 'Changed randomness to be blocking CSPRNG based for generated passwords and salts.');
 	$Table->addRow('---', '');
 
 	## Version 2.0.1
