@@ -1,5 +1,6 @@
 2.0.2   - Two Reboot checks merged into one for quicker response in Job Processor.
         - Added ability to release build/distribution lock in System Status.
+        - Changed randomness to be blocking CSPRNG based for generated passwords and salts.
 2.0.1   - Clarified RMin/RMax in IP Sweep.
 		- Fixed an issue with Redirects overruling each other.
         - Dropped legacy IP entry in Distribution Status.
